--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>404</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -58,10 +58,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>404</h1>
+      <p>Jangan bandel deh! 😝</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Kalau tetap ngotot, yuk kembangkan aplikasi ini. Source code <a href= "https://github.com/fauzipadlaw/spk-ahp">Github</a>.</p>
   </div>
 </body>
 </html>
