added target blank

--- a/public/404.html
+++ b/public/404.html
@@ -61,7 +61,7 @@
       <h1>404</h1>
       <p>Jangan bandel deh! 😝</p>
     </div>
-    <p>Kalau tetap ngotot, yuk kembangkan aplikasi ini. Source code <a href= "https://github.com/fauzipadlaw/spk-ahp">Github</a>.</p>
+    <p>Kalau tetap ngotot, yuk kembangkan aplikasi ini. Source code <a href= "https://github.com/fauzipadlaw/spk-ahp" target="_blank">Github</a>.</p>
   </div>
 </body>
 </html>
